--- a/e3/build.gradle
+++ b/e3/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
 group 'org.bedu.App'
@@ -15,5 +15,16 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG() {
+        // To generate reports by TestNG library
+        useDefaultListeners = true
+    }
+}
+
+dependencies {
+    testImplementation 'org.testng:testng:7.7.0'
+}
+
+run {
+    standardInput = System.in;
 }
