--- a/e5/build.gradle
+++ b/e5/build.gradle
@@ -1,19 +1,35 @@
 plugins {
-    id 'java'
+    id 'application'
+    id "se.thinkcode.cucumber-runner" version "0.0.11"
 }
 
-group 'org.example'
+group 'org.bedu'
 version '1.0-SNAPSHOT'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
+    implementation 'io.cucumber:cucumber-java:7.12.1'
+    implementation 'io.cucumber:cucumber-junit:7.12.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 test {
     useJUnitPlatform()
+}
+
+cucumber {
+    glue = "classpath:org.bedu.stepdefinitions"
+    main = "io.cucumber.core.cli.Main"
 }
