--- a/e8/build.gradle
+++ b/e8/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'java'
+    id 'application'
 }
 
-group 'org.example'
+group 'org.bedu'
 version '1.0-SNAPSHOT'
 
 repositories {
